tests/models/struct/unnamed/f64/pass/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2.0)]
    f64
);
fn main() {}
