tests/models/struct/unnamed/f64/fail/max_length.rs
use dade::model;
#[model]
struct TestModel (
   #[field(max_length = 2)]
    f64
);
fn main() {}
